--- a/style.css
+++ b/style.css
@@ -52,7 +52,13 @@ label {
   color: #ccc;
 }
 button {
-  text-align: center;
+    padding: 5px 20px;
+    margin-bottom: 20px;
+    color: #fff;
+    background-color: rgb(75, 145, 148);
+    border: none;
+    border-radius: 5px;
+
 }
 
 @media (max-width: 425px) {
@@ -63,4 +69,8 @@ button {
     padding: 5px 20px;
     color: #fff;
   }
+}
+.result{
+    text-align: center;
+    font-size: 20px;   
 }
