--- a/style.css
+++ b/style.css
@@ -52,13 +52,12 @@ label {
   color: #ccc;
 }
 button {
-    padding: 5px 20px;
-    margin-bottom: 20px;
-    color: #fff;
-    background-color: rgb(75, 145, 148);
-    border: none;
-    border-radius: 5px;
-
+  padding: 5px 20px;
+  margin-bottom: 20px;
+  color: #fff;
+  background-color: rgb(75, 145, 148);
+  border: none;
+  border-radius: 5px;
 }
 
 @media (max-width: 425px) {
@@ -70,7 +69,13 @@ button {
     color: #fff;
   }
 }
-.result{
-    text-align: center;
-    font-size: 20px;   
+.result {
+  text-align: center;
+  font-size: 20px;
+  background-color: #fff;
+  color: #000;
+}
+.result span {
+  font-size: 50px;
+  color: rgb(13, 98, 224);
 }
