--- a/style.css
+++ b/style.css
@@ -26,10 +26,11 @@ body {
 }
 .container {
   margin: auto;
-  max-width: 1400px;
-  height: 100vh;
+  max-width: 1200px;
   padding: 5px 20px;
   color: #fff;
+  background-color: rgb(21, 79, 138);
+ 
 }
 
 h1 {
@@ -59,6 +60,12 @@ button {
   border: none;
   border-radius: 5px;
 }
+@media (min-width:1440px) {
+  .container {
+    height: 100vh;
+   
+  }
+}
 
 @media (max-width: 425px) {
   .container {
@@ -69,13 +76,17 @@ button {
     color: #fff;
   }
 }
-.result {
+.final-score-container {
   text-align: center;
   font-size: 20px;
   background-color: #fff;
   color: #000;
 }
-.result span {
+.final-score-container span {
   font-size: 50px;
   color: rgb(13, 98, 224);
+}
+footer{
+  background-color:rgba(71, 66, 66, 0.609) ;
+  text-align: center;
 }
